<resources>
    <string name="app_name">Just Java</string>

    <!--Header text for the list of toppings[CHAR LIMIT=20] XML FILE-->
    <string name="toppings">TOPPINGS</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!</string>
    <string name="wippdcream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <!--Header text for the list of toppings[CHAR LIMIT=20] JAVA FILE-->
    <string name="coffeeorder">coffeeorder</string>
    <string name="email_clint">email clint</string>
    <string name="toastmesseg1">"Cups Cann't be less than 1"</string>
    <string name="toastmesseg2">"Cups Cann't be more than 100"</string>
    <string name="namejava">Name:</string>
    <string name="wippdcreamjava">Add Wippdcream?</string>
    <string name="chocolatejava">Add Chocolate?</string>
    <string name="quantityjava">Quantity:</string>
    <string name="totaljava">Total:$</string>


</resources>
